2009-02-04  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=23655
        Clean up storage layout tests a bit.

        * storage/close-during-stress-test.html: Moved brace to new line.
        * storage/empty-statement.html: Moved brace to new line.
        * storage/execute-sql-args.html: Moved brace to new line.
        * storage/quota-tracking.html: Moved brace to new line.
        * storage/success-callback.html: Moved brace to new line, removed erroneous callback argument.
        * storage/transaction-callback-exception-crash.html: Added.
        * storage/transaction-callback-exception-crash.txt: Renamed from LayoutTests/storage/transaction_callback_exception_crash-expected.txt.
        * storage/transaction_callback_exception_crash.html: Removed.

2009-02-04  Jeremy Moskovich  <jeremy@chromium.org>

        Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=23471
        Fix text-overflow:ellipsis; for RTL case.

        Rebaseline LayoutTests/editing/spelling/inline_spelling_markers.html to reflect correct behavior.

        * fast/css/text-overflow-ellipses.html: Added.
        * platform/mac/editing/spelling/inline_spelling_markers-expected.checksum:
        * platform/mac/editing/spelling/inline_spelling_markers-expected.png:
        * platform/mac/fast/css/text-overflow-ellipses-expected.checksum: Added.
        * platform/mac/fast/css/text-overflow-ellipses-expected.png: Added.
        * platform/mac/fast/css/text-overflow-ellipses-expected.txt: Added.

2009-02-03  Brad Garcia  <bgarcia@google.com>

        Reviewed by Eric Seidel.

        Test for https://bugs.webkit.org/show_bug.cgi?id=20443

        * fast/frames/frame-dead-region-expected.txt: Added.
        * fast/frames/frame-dead-region.html: Added.
        * fast/frames/resources/frame-dead-region-left.html: Added.

2009-02-03  Justin Garcia  <justin.garcia@apple.com>
