@@ -1,0 +1,4 @@
+This is a test for bug 22753. This test verifies that if a page with non-expired timeout is pushed into the page cache and then a window is closed, the resulting cache purge will stop the timer. Stopping the timer releases the JS global object. If bug is not fixed, JS global object and all the objects it holds onto are not released and memory leak occurs.
+Test is passed if you see "PASS" below. This test can only run in DumpRenderTree since it needs access to GCController.
+
+PASS
