@@ -1,0 +1,24 @@
+<script>
+
+// This makes document referenced by the global object (window).
+// If the bug 22753 wasn't fixed, there would be circular reference
+// timer->JSFunction->JSDOMWindow->Document->timer, and refcount
+// on the Document wouldn't go to 0.
+var doc = document;
+
+var stuff = new Array;
+function loadNext()
+{
+    // Allocate a lot so the mem leak is easy to detect.
+    // Some other factors (running DumpRenderTree --threading) could cause
+    // other JS objects to be allocated, but not so much.
+    for(i = 0; i < 1000; i++)
+        stuff[i] = new String("abc");
+
+    setInterval(function fooo() {}, 1000);
+
+    location.href = "cached-timeout-page-2.html";
+}
+</script>
+<body onload="loadNext()">
+</body>
