@@ -1,0 +1,2 @@
+<body onload="window.opener.scheduleFinish(); window.close()">
+</body>
